# google-mcp-rs

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
mcpb/: .gitignore  README.md  manifest.json  pack.sh
src/: auth_gate.rs  config.rs  credentials.rs  domain.rs  errors.rs  local_auth.rs  main.rs  state.rs
src/files/: mod.rs
src/google/: calendar.rs  docs.rs  drive.rs  gmail.rs  http.rs  mod.rs  session.rs  sheets.rs
src/mcp/: auth_tools.rs  calendar_tools.rs  docs_tools.rs  drive_tools.rs  files_tools.rs  gmail_tools.rs  mod.rs  params.rs  server.rs  sheets_tools.rs
src/mime/: mod.rs
src/oauth/: google.rs  jwt.rs  mod.rs  pkce.rs  proxy.rs
src/storage/: accounts.rs  clients.rs  codes.rs  crypto.rs  mod.rs
src/storage/migrations/: 001_initial.sql
