[package]
name = "google-mcp"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/matpb/google-mcp-rs"
readme = "README.md"
keywords = ["mcp", "gmail", "google", "workspace", "oauth"]
categories = ["web-programming", "command-line-utilities"]
license = "MIT"
authors = ["Mathieu-Philippe Bourgeois <bourgeois.mat@gmail.com>"]
description = "Multi-tenant Rust MCP server for Google Workspace (Gmail first; Sheets and Drive next) with full OAuth 2.0 over streamable HTTP"

[[bin]]
name = "google-mcp"
path = "src/main.rs"

[dependencies]
# Web framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
tokio = { version = "1.42", features = ["full"] }

# MCP
rmcp = { version = "1.2", features = ["server", "transport-streamable-http-server"] }
schemars = "1.2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# OAuth + crypto
jsonwebtoken = "9"
sha2 = "0.10"
base64ct = { version = "1.6", features = ["alloc"] }
base64 = "0.22"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"

# MIME
mail-builder = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "1"

# Utilities
uuid = { version = "1.11", features = ["v4"] }
time = { version = "0.3", features = ["serde", "macros"] }
url = "2.5"
dotenvy = "0.15"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
